--- a/position/index.html
+++ b/position/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <section class="principal">
-        <div class="center"></div>
+      <div class="children1"></div>
+      <div class="children2"></div>
     </section>
   </body>
 </html>
